[package]
name = "spook_meme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blocking = "1.2.0"
font-loader = "0.11.0"
image = "0.24.1"
imageproc = { git = "https://github.com/image-rs/imageproc" }
reqwest = { version = "0.11.10", features = ["json"] }
rusttype = "0.9.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
